--- a/index.html
+++ b/index.html
@@ -2,64 +2,87 @@
 <html lang="es">
 <head>
   <meta charset="utf-8" />
-  <title>Seguimiento Financiero EMCALI 2025</title>
+  <title>Tableros UENE</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Tablero de Estados Financieros EMCALI 2025" />
+  <meta name="description" content="Tableros Power BI UENE" />
 
-  <!-- Estilos mínimos para un embed limpio y responsive -->
   <style>
     :root{
-      --bg:#0b0d0f;           /* fondo oscuro sobrio */
-      --maxw: 1400px;         /* ancho máximo en desktop */
-      --radius: 16px;         /* esquinas suaves */
+      --bg:#0b0d0f;
+      --maxw: 1400px;
+      --radius: 16px;
       --shadow: 0 8px 24px rgba(0,0,0,.25);
+      --card:#111418;
+      --border:#1d232a;
+      --muted:#98a2ad;
     }
     html, body {
       height: 100%;
       margin: 0;
       background: var(--bg);
       color: #e9ecef;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
     }
     .wrap {
       min-height: 100%;
       display: grid;
-      place-items: center;
+      place-items: start center;
       padding: 24px;
       box-sizing: border-box;
+      gap: 18px;
     }
     .card {
       width: 100%;
       max-width: var(--maxw);
-      background: #111418;
-      border: 1px solid #1d232a;
+      background: var(--card);
+      border: 1px solid var(--border);
       border-radius: var(--radius);
       box-shadow: var(--shadow);
       overflow: hidden;
     }
     .card header {
       padding: 16px 20px;
-      border-bottom: 1px solid #1d232a;
+      border-bottom: 1px solid var(--border);
       display: flex;
       align-items: center;
+      justify-content: space-between;
       gap: 10px;
     }
-    .badge {
-      font-size: 12px; 
-      padding: 4px 8px; 
-      border: 1px solid #2a323c; 
-      border-radius: 999px; 
-      color: #b6c2cf;
+    .left {
+      display:flex;
+      align-items:center;
+      gap:10px;
+      min-width: 0;
     }
-    /* Contenedor responsive con aspect-ratio 16:9 (ajústalo si tu reporte usa otro) */
+    h1, h2 {
+      margin: 0;
+      font-weight: 650;
+      letter-spacing: .2px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+    h1 { font-size: 18px; }
+    h2 { font-size: 16px; }
+    .badge {
+      font-size: 12px;
+      padding: 4px 8px;
+      border: 1px solid #2a323c;
+      border-radius: 999px;
+      color: #b6c2cf;
+      flex: 0 0 auto;
+    }
     .embed {
       position: relative;
-      aspect-ratio: 16 / 9;
       width: 100%;
       background: #0e1116;
     }
+    .embed.r16x9 { aspect-ratio: 16 / 9; }
+    /* PACC viene “alto” (tu iframe era 1024x1060) */
+    .embed.rPACC { aspect-ratio: 1024 / 1060; }
+
     .embed iframe {
-      position: absolute; 
+      position: absolute;
       inset: 0;
       width: 100%;
       height: 100%;
@@ -67,51 +90,70 @@
     }
     .card footer {
       padding: 10px 16px;
-      border-top: 1px solid #1d232a;
+      border-top: 1px solid var(--border);
       font-size: 12px;
-      color: #98a2ad;
+      color: var(--muted);
       display: flex;
       justify-content: space-between;
       gap: 12px;
       flex-wrap: wrap;
     }
-    .sr-only {
-      position: absolute; 
-      width: 1px; 
-      height: 1px; 
-      padding: 0; 
-      margin: -1px; 
-      overflow: hidden; 
-      clip: rect(0,0,0,0); 
-      white-space: nowrap; 
-      border: 0;
-    }
   </style>
 </head>
 
 <body>
-  <a class="sr-only" href="#contenido">Saltar al contenido</a>
-  <main class="wrap" id="contenido" aria-label="Seguimiento Financiero EMCALI 2025">
-    <section class="card" role="region" aria-label="Informe Power BI: Estados Financieros">
+  <main class="wrap" aria-label="Tableros UENE">
+
+    <!-- CARD 1 -->
+    <section class="card" role="region" aria-label="Informe Power BI: Contabilidad Regulatoria UENE">
       <header>
-        <h1 style="font-size:18px; margin:0; font-weight:600;">Seguimiento Financiero EMCALI 2025</h1>
-        <span class="badge">Estados Financieros</span>
+        <div class="left">
+          <h1>Contabilidad Regulatoria UENE</h1>
+          <span class="badge">Power BI</span>
+        </div>
+        <span class="badge">Uso interno</span>
       </header>
 
-      <div class="embed">
+      <div class="embed r16x9">
         <iframe
-          title="EEFF_Emcali_202510"
-          src="https://app.powerbi.com/view?r=eyJrIjoiOTJiYmRhNjQtMzAyNS00NDJjLTg1YjMtYWMyY2QxNTczODVlIiwidCI6Ijc2MzIwYzgyLTJlYmYtNGI2ZS04ZTVjLWRmMGUyMWQxOTZjOCIsImMiOjR9"
+          title="Contabilidad Regulatoria UENE"
+          src="https://app.powerbi.com/view?r=eyJrIjoiODY4Y2E4YWMtNjQyOS00YTFhLTg2MWYtM2ZlNDBiMmI1MTU1IiwidCI6Ijc2MzIwYzgyLTJlYmYtNGI2ZS04ZTVjLWRmMGUyMWQxOTZjOCIsImMiOjR9"
           loading="lazy"
           allowfullscreen
         ></iframe>
       </div>
 
       <footer>
-        <span>EMCALI EICE ESP · Gerencia Área Financiera – Unidad de Contabilidad</span>
-        <span>Actualizado: Octubre 2025 · Uso interno</span>
+        <span>EMCALI EICE ESP · UENE · Contabilidad Regulatoria</span>
+        <span>Power BI (View)</span>
       </footer>
     </section>
+
+    <!-- CARD 2 -->
+    <section class="card" role="region" aria-label="Informe Power BI: PACC EMCALI 2026">
+      <header>
+        <div class="left">
+          <h2>PACC EMCALI 2026</h2>
+          <span class="badge">Power BI</span>
+        </div>
+        <span class="badge">Uso interno</span>
+      </header>
+
+      <div class="embed rPACC">
+        <iframe
+          title="PACC_EMCALI_2026"
+          src="https://app.powerbi.com/view?r=eyJrIjoiYjhkM2EwOTgtYzk5OC00MGQ5LTkxMjctZjcwNmM4NTM0YTM5IiwidCI6Ijc2MzIwYzgyLTJlYmYtNGI2ZS04ZTVjLWRmMGUyMWQxOTZjOCIsImMiOjR9"
+          loading="lazy"
+          allowfullscreen
+        ></iframe>
+      </div>
+
+      <footer>
+        <span>EMCALI EICE ESP · UENE · PACC</span>
+        <span>Power BI (View)</span>
+      </footer>
+    </section>
+
   </main>
 </body>
 </html>
