--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="es">
 <head>
   <meta charset="utf-8" />
-  <title>Tableros UENE</title>
+  <title>Contabilidad Regulatoria UENE</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Tableros Power BI UENE" />
+  <meta name="description" content="Tableros UENE" />
 
   <style>
     :root{
@@ -12,75 +12,56 @@
       --maxw: 1400px;
       --radius: 16px;
       --shadow: 0 8px 24px rgba(0,0,0,.25);
-      --card:#111418;
-      --border:#1d232a;
-      --muted:#98a2ad;
     }
     html, body {
       height: 100%;
       margin: 0;
       background: var(--bg);
       color: #e9ecef;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";
     }
     .wrap {
       min-height: 100%;
       display: grid;
       place-items: start center;
+      gap: 18px;
       padding: 24px;
       box-sizing: border-box;
-      gap: 18px;
     }
     .card {
       width: 100%;
       max-width: var(--maxw);
-      background: var(--card);
-      border: 1px solid var(--border);
+      background: #111418;
+      border: 1px solid #1d232a;
       border-radius: var(--radius);
       box-shadow: var(--shadow);
       overflow: hidden;
     }
     .card header {
       padding: 16px 20px;
-      border-bottom: 1px solid var(--border);
+      border-bottom: 1px solid #1d232a;
       display: flex;
       align-items: center;
-      justify-content: space-between;
       gap: 10px;
     }
-    .left {
-      display:flex;
-      align-items:center;
-      gap:10px;
-      min-width: 0;
-    }
-    h1, h2 {
-      margin: 0;
-      font-weight: 650;
-      letter-spacing: .2px;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-    h1 { font-size: 18px; }
-    h2 { font-size: 16px; }
     .badge {
       font-size: 12px;
       padding: 4px 8px;
       border: 1px solid #2a323c;
       border-radius: 999px;
       color: #b6c2cf;
-      flex: 0 0 auto;
     }
+
+    /* Embeds */
     .embed {
       position: relative;
       width: 100%;
       background: #0e1116;
+      aspect-ratio: 16 / 9;      /* default */
     }
-    .embed.r16x9 { aspect-ratio: 16 / 9; }
-    /* PACC viene “alto” (tu iframe era 1024x1060) */
-    .embed.rPACC { aspect-ratio: 1024 / 1060; }
-
+    .embed.pacc {
+      aspect-ratio: 1024 / 1060; /* ratio real del PACC */
+    }
     .embed iframe {
       position: absolute;
       inset: 0;
@@ -88,33 +69,44 @@
       height: 100%;
       border: 0;
     }
+
     .card footer {
       padding: 10px 16px;
-      border-top: 1px solid var(--border);
+      border-top: 1px solid #1d232a;
       font-size: 12px;
-      color: var(--muted);
+      color: #98a2ad;
       display: flex;
       justify-content: space-between;
       gap: 12px;
       flex-wrap: wrap;
     }
+    .sr-only {
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      padding: 0;
+      margin: -1px;
+      overflow: hidden;
+      clip: rect(0,0,0,0);
+      white-space: nowrap;
+      border: 0;
+    }
   </style>
 </head>
 
 <body>
-  <main class="wrap" aria-label="Tableros UENE">
+  <a class="sr-only" href="#contenido">Saltar al contenido</a>
 
-    <!-- CARD 1 -->
+  <main class="wrap" id="contenido" aria-label="Tableros UENE">
+
+    <!-- TARJETA 1: Contabilidad Regulatoria -->
     <section class="card" role="region" aria-label="Informe Power BI: Contabilidad Regulatoria UENE">
       <header>
-        <div class="left">
-          <h1>Contabilidad Regulatoria UENE</h1>
-          <span class="badge">Power BI</span>
-        </div>
-        <span class="badge">Uso interno</span>
+        <h1 style="font-size:18px; margin:0; font-weight:600;">Contabilidad Regulatoria UENE</h1>
+        <span class="badge">Power BI</span>
       </header>
 
-      <div class="embed r16x9">
+      <div class="embed">
         <iframe
           title="Contabilidad Regulatoria UENE"
           src="https://app.powerbi.com/view?r=eyJrIjoiODY4Y2E4YWMtNjQyOS00YTFhLTg2MWYtM2ZlNDBiMmI1MTU1IiwidCI6Ijc2MzIwYzgyLTJlYmYtNGI2ZS04ZTVjLWRmMGUyMWQxOTZjOCIsImMiOjR9"
@@ -125,24 +117,22 @@
 
       <footer>
         <span>EMCALI EICE ESP · UENE · Contabilidad Regulatoria</span>
-        <span>Power BI (View)</span>
+        <span>Uso interno</span>
       </footer>
     </section>
 
-    <!-- CARD 2 -->
+    <!-- TARJETA 2: PACC -->
     <section class="card" role="region" aria-label="Informe Power BI: PACC EMCALI 2026">
       <header>
-        <div class="left">
-          <h2>PACC EMCALI 2026</h2>
-          <span class="badge">Power BI</span>
-        </div>
-        <span class="badge">Uso interno</span>
+        <h1 style="font-size:18px; margin:0; font-weight:600;">PACC EMCALI 2026</h1>
+        <span class="badge">Power BI</span>
       </header>
 
-      <div class="embed rPACC">
+      <div class="embed pacc">
         <iframe
           title="PACC_EMCALI_2026"
           src="https://app.powerbi.com/view?r=eyJrIjoiYjhkM2EwOTgtYzk5OC00MGQ5LTkxMjctZjcwNmM4NTM0YTM5IiwidCI6Ijc2MzIwYzgyLTJlYmYtNGI2ZS04ZTVjLWRmMGUyMWQxOTZjOCIsImMiOjR9"
+          frameborder="0"
           loading="lazy"
           allowfullscreen
         ></iframe>
@@ -150,7 +140,7 @@
 
       <footer>
         <span>EMCALI EICE ESP · UENE · PACC</span>
-        <span>Power BI (View)</span>
+        <span>Uso interno</span>
       </footer>
     </section>
 
