--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <div class="embed">
         <iframe
           title="PACC EMCALI 2026"
-          src=src="https://app.powerbi.com/view?r=eyJrIjoiYjhkM2EwOTgtYzk5OC00MGQ5LTkxMjctZjcwNmM4NTM0YTM5IiwidCI6Ijc2MzIwYzgyLTJlYmYtNGI2ZS04ZTVjLWRmMGUyMWQxOTZjOCIsImMiOjR9"
+          src="https://app.powerbi.com/view?r=eyJrIjoiYjhkM2EwOTgtYzk5OC00MGQ5LTkxMjctZjcwNmM4NTM0YTM5IiwidCI6Ijc2MzIwYzgyLTJlYmYtNGI2ZS04ZTVjLWRmMGUyMWQxOTZjOCIsImMiOjR9"
           loading="lazy"
           allowfullscreen
         ></iframe>
